create and profile added

--- a/app/globals.css
+++ b/app/globals.css
@@ -203,3 +203,40 @@
     transform: scale(1) rotate(45deg) translateY(-100%);
   }
 }
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-100% - 1rem));
+  }
+}
+
+.animate-marquee {
+  animation: marquee 15s linear infinite;
+}
+
+@keyframes animate-sound-wave {
+  0%,
+  100% {
+    height: 4px;
+  }
+  50% {
+    height: 16px;
+  }
+}
+
+.animate-sound-wave {
+  animation: animate-sound-wave 1s ease-in-out infinite;
+}
+
+
